<?xml version="1.0"?>
<package format="3">
  <name>low_pass_filters</name>
  <version>0.0.0</version>
  <description>The low_pass_filters package</description>
  <maintainer email="kyle@todo.todo">kyle</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
